Migrate all services tests to JUNIT5